Account Service App Service test case added
